deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keystone-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: keystone-operator
  template:
    metadata:
      labels:
        name: keystone-operator
    spec:
      serviceAccountName: keystone-operator
      containers:
        - name: keystone-operator
          # Replace this with the built image name
          image: quay.io/openstack-k8s-operators/keystone-operator:devel
          command:
          - keystone-operator
          imagePullPolicy: Always
